src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Belong_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Belong To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__member_id__c</fullName>
        <externalId>true</externalId>
        <label>Silverpop Member Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
</CustomObject>